[package]
name = "tee-enclave"
version = "0.1.0"
description = "TEE Enclave 应用 - 可信执行环境内的占卜计算引擎"
authors = ["Cosmos Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/memoio/cosmos"

# 独立工作区，不属于主项目工作区
[workspace]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 加密库
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
rand_core = { version = "0.6", default-features = false }

# 序列化
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }

# 错误处理
thiserror = { version = "1.0", optional = true }

# 时间处理
chrono = { version = "0.4", default-features = false, optional = true }

# 日志
log = { version = "0.4", default-features = false }

# SGX 支持 (可选)
# sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }

[dev-dependencies]
rand = "0.8"
hex = "0.4"

[features]
default = ["std"]
std = [
    "aes-gcm/std",
    "ed25519-dalek/std",
    "sha2/std",
    "hkdf/std",
    "rand_core/std",
    "serde/std",
    "serde_json",
    "thiserror",
    "chrono",
    "log/std",
]
# SGX Enclave 模式 (no_std)
sgx = []
