[package]
name = "pallet-sharemall-review"
version = "0.1.0"
description = "COSMOS ShareMall 评价管理模块"
authors = ["COSMOS Team"]
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }

# 内部依赖
pallet-sharemall-common = { path = "../common", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-sharemall-common/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
