[package]
name = "pallet-commission-common"
version = "0.1.0"
description = "Commission system shared types and traits"
authors = ["COSMOS Team"]
edition = "2021"
license = "MIT"

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }

pallet-entity-common = { path = "../../common", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "sp-runtime/std",
    "pallet-entity-common/std",
]
